js/js.translator/testData/incremental/invalidation/jsExport/lib1/l1.2.kt
@JsName("bar") @JsExport inline fun foo() = 77
fun gaz() = 99
